# pytorch_process

./: .gitignore
week1/: autogard.py  resnet50.py  resnet50_to_onnx.py  tensor.py  test_static_vs_dynamic.py
week2/: CMakeLists.txt  README.md  benchmark_summary.txt  build.sh  build_debug.sh  new_module.sh  run_benchmarks.sh
week2/build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
week2/build_debug/check_dimension/: Makefile  cmake_install.cmake
week2/build_debug/device_information/: Makefile  cmake_install.cmake
week2/build_debug/grid_block/: Makefile  cmake_install.cmake
week2/build_debug/hello_world/: Makefile  cmake_install.cmake
week2/build_debug/share_memory_read_data/: Makefile  cmake_install.cmake
week2/build_debug/sum_array/: Makefile  cmake_install.cmake
week2/build_debug/sum_arrays_uniform_memory/: Makefile  cmake_install.cmake
week2/build_debug/sum_matrix/: Makefile  cmake_install.cmake
week2/build_debug/thread_index/: Makefile  cmake_install.cmake
week2/check_dimension/: check_dimension.cu
week2/device_information/: device_information.cu
week2/grid_block/: CMakeLists.txt  grid_block.cu
week2/hello_world/: hello_world.cu
week2/include/: utils.h
week2/reduce_compare/: CMakeLists.txt  reduce_compare.cu
week2/reduce_integer_share_momory/: CMakeLists.txt  reduce_integer_share_momory.cu
week2/reduce_v1/: CMakeLists.txt  ncu_report.txt  ncu_stdout.txt  nvprof_stdout.txt  reduce_v1  reduce_v1.cu
week2/reduce_v2/: CMakeLists.txt  ncu_report.txt  ncu_stdout.txt  nvprof_stdout.txt  reduce_v2  reduce_v2.cu
week2/reduce_v3/: CMakeLists.txt  ncu_report.ncu-rep  ncu_report.txt  ncu_stdout.txt  nvprof_stdout.txt  reduce_v3  reduce_v3.cu
week2/reduce_v4/: CMakeLists.txt  ncu_report.txt  ncu_stdout.txt  nvprof_stdout.txt  reduce_v4  reduce_v4.cu  reduce_v4.ncu-rep
week2/reduce_v5/: CMakeLists.txt  ncu_report.txt  ncu_stdout.txt  nvprof_stdout.txt  reduce_v5  reduce_v5.cu
week2/reg_tiled_matmul/: CMakeLists.txt  reg_tiled_matmul  reg_tiled_matmul.cu  reg_tiled_matmul.ncu-rep
week2/reg_tiled_matmul_dbuf/: CMakeLists.txt  reg_tiled_matmul_dbuf  reg_tiled_matmul_dbuf.cu
week2/reg_tiled_matmul_nobank/: CMakeLists.txt  reg_tiled_matmul_nobank  reg_tiled_matmul_nobank.cu
week2/sum_array/: CMakeLists.txt  sum_array.cu
week2/sum_arrays_uniform_memory/: sum_arrays_uniform_memory.cu
week2/sum_matrix/: sum_matrix.cu
week2/test_bank/: test_bank  test_bank.cu
week2/thread_index/: thread_index.cu
week2/tiled_matmul/: CMakeLists.txt  profile_tiled_matmul.ncu-rep  tiled_matmul  tiled_matmul.cu
week2/transform_shared_memory/: transform_shared_memory.cu
week3/scaled_dot_product_attention/: scaled_dot_product_attention.py
week3/scaled_dot_product_attention_compare/: scaled_dot_product_attention_compare.py
